@@ -1,5 +1,5 @@
 /*
-    Copyright 1997-2015, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 1997-2017, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -37,7 +37,7 @@ namespace fostlib {
 
 
     /// A single performance counter
-    class FOST_CORE_DECLSPEC performance {
+    class FOST_CORE_DECLSPEC performance final {
         std::atomic<int64_t> count;
         const module * const parent;
         const jcursor path;
@@ -48,6 +48,13 @@ namespace fostlib {
         template<typename... Ss>
         performance(const module &m, const Ss &... ss)
         : performance(m, jcursor(ss...)) {
+        }
+        /// Make movable
+        performance(performance &&p)
+        : count(p.count.load()),
+            parent(p.parent),
+            path(std::move(p.path))
+        {
         }
         /// Destruct the performance counter
         ~performance();
