@@ -1,3 +1,6 @@
+2017-01-29  Kirit Saelensminde  <kirit@felspar.com>
+ Make the performance counter movable.
+
 2017-01-27  Kirit Saelensminde  <kirit@felspar.com>
  * Add better support for "dynamic" modules.
  * Log messages can be created directly from JSON.
